# ProjektChmuraVistula2026

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.nginx  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: main..yml
front/: index.html
nginx/: default.conf  default.conf.template
src/: counter_utils.py  database.py  models.py  repository.py  utils.py
templates/: index.html
