[project]
name = "cloudprojektvistula2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "psycopg[binary]>=3.1.18",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
